# graph-streaming-ahollocou

./: .gitignore  .gitmodules  edge_list_to_metis.py  metis_to_edge_list.py  metis_to_rnd_edgelist.py
cpp/: CMakeLists.txt  add_cluster_score.py  cluster_file_converter.py  mod_networkx.py  read_fb_file.py  run_ahollocou.sh  streaming_clustering_alhollocou.fbs
cpp/StreamInfo/: ClusteringMetrics.py  GraphMetadata.py  MemoryConsumption.py  Partition.py  PartitionConfiguration.py  RunTime.py
cpp/include/: FlatBuferWriter.h  streaming_clustering_alhollocou_generated.h  types.h  utils.h
cpp/results/: tiny_02.txt  tiny_02_vieclus.txt
cpp/source/: utils.cpp
cpp/source/streamcom/: main.cpp
edge_graphs/: tiny_02.txt  tiny_03_edge.txt
graphs/: tiny_02.txt  tiny_03_edge.txt
